--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,12 +1,5 @@
 ﻿<!-- nav -->
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="user">
-    <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="/">Home</a>
-        <a class="nav-item nav-link" routerLink="/admin" *ngIf="isAdmin">Admin</a>
-        <a class="nav-item nav-link" (click)="logout()">Logout</a>
-    </div>
-</nav>
-
+<app-navbar></app-navbar>
 <!-- main app container -->
 <div class="container">
     <router-outlet></router-outlet>
